fixed menu shift bug

--- a/app-client/src/Components/App/App.css
+++ b/app-client/src/Components/App/App.css
@@ -1,5 +1,6 @@
 :local(.appContainer) {
   min-height: 100vh;
+  min-width: 100vw;
   position: relative;
   padding-bottom: 5%;
 }
